# OS-Kernel

./: .gdb_history  .gitignore  Makefile  kernel.ld
src/: BasicRenderer.cpp  BasicRenderer.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Framebuffer.h  IO.cpp  IO.h  PageFrameAllocator.cpp  PageFrameAllocator.h  SimpleFont.h  cstr.cpp  cstr.h  kernel.cpp  kernelutils.cpp  kernelutils.h  math.h  memutils.cpp  memutils.h  panic.cpp  panic.h  pci.h  string.cpp  string.h  types.h
src/GDT/: GDT.asm  GDT.cpp  GDT.h
src/PCI/: acpi.cpp  acpi.h  pci.cpp  pci.h  pciDescriptors.cpp
src/Paging/: PageFrameAllocator.cpp  PageMapIndexer.cpp  PageTableManager.cpp  PageTableManager.h  paging.cpp
src/ahci/: ahci.cpp  ahci.h
src/filesystem/: fat.cpp  fat.h
src/interrupts/: IDT.cpp  IDT.h  interrupts.cpp  interrupts.h
src/memory/: efiMemory.h  heap.cpp  heap.h  memutils.cpp  memutils.h
src/memory/Paging/: PageFrameAllocator.cpp  PageFrameAllocator.h  PageMapIndexer.cpp  PageMapIndexer.h  paging.cpp  paging.h
src/scheduling/pit/: pit.cpp  pit.h
src/userinput/: cursor.h  kbScancodeTranslation.cpp  kbScancodeTranslation.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
